mainframe-workers/grammar/panel/PanelParser.py
# Generated from grammar/panel/Panel.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class PanelParser ( Parser ):

    grammarFileName = "Panel.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "'\\'", "'/'", "'@'", "'!'", 
                     "'$'", "'?'", "','", "'='", "'*'", "'+'", "'#'", "'\"'", 
                     "'_'", "'|'", "']'", "'['", "'''", "'>'", "'<'", "'^'" ]

    symbolicNames = [ "<INVALID>", "LPAREN", "RPAREN", "SSLASH", "SLASH", 
                      "AMPCHAR", "EXCLAIMCHAR", "DOLLARCHAR", "JP_MYSTERYCHAR", 
                      "COMMACHAR", "EQUALCHAR", "ASTERISK", "PLUSCHAR", 
                      "HASHCHAR", "DOUBLEQUOTE", "UNDERSCORE", "PIPECHAR", 
                      "RBRACKET", "LBRACKET", "SINGLEQUOTE", "GREATERTHAN", 
                      "LESSTHAN", "CARET", "ATTR", "BODY", "COLOR", "DEFAULT", 
                      "FORMAT", "HIGH", "EBCDIC", "DBCS", "MIX", "HILITE", 
                      "INTENS", "LOW", "NON", "TRUNC", "TYPE", "KANA", "WINDOW", 
                      "INIT", "VGET", "VPUT", "PROC", "END", "MSG", "THEN", 
                      "IF", "AND", "OR", "NOT", "ELSE", "TRANS", "SKIP_", 
                      "ON", "OFF", "VER", "NONBLANK", "ALPHA", "ALPHAB", 
                      "BIT", "DSNAME", "DSNAMEF", "DSNAMEFM", "DSNAMEPQ", 
                      "DSNAMEQ", "ENUM", "FILEID", "HEX", "IDATE", "INCLUDE", 
                      "IPADDR4", "ITIME", "JDATE", "JSTD", "LEN", "LIST", 
                      "LISTV", "LISTVX", "LISTX", "NAME", "NAMEF", "NUM", 
                      "PICT", "PICTCN", "RANGE", "STDDATE", "STDTIME", "PAD", 
                      "NULLS", "USER", "EXTEND", "CAPS", "IN", "OUT", "WIDTH", 
                      "SCRL", "AREA", "DYNAMIC", "GRAPHIC", "SCROLL", "LVLINE", 
                      "LEFT", "RIGHT", "AXIS", "JUST", "MODEL", "REINIT", 
                      "PADC", "REFRESH", "OUTLINE", "NONE", "BOX", "PFK", 
                      "NEWLINE", "WS", "INTEGERLITERAL", "COMMENT", "COMMENT2", 
                      "IDENTIFIER", "STRINGLITERAL", "JP_CHAR" ]

    RULE_startRule = 0
    RULE_section = 1
    RULE_reinitSection = 2
    RULE_modelSection = 3
    RULE_modelParam = 4
    RULE_model = 5
    RULE_attributeSection = 6
    RULE_attributeComponent = 7
    RULE_attrParameter = 8
    RULE_outlineParam = 9
    RULE_outlineValue = 10
    RULE_padcParam = 11
    RULE_padcValue = 12
    RULE_justParam = 13
    RULE_justValue = 14
    RULE_areaParam = 15
    RULE_areaValue = 16
    RULE_scrollParam = 17
    RULE_scrollValue = 18
    RULE_extendParam = 19
    RULE_extendValue = 20
    RULE_capsParam = 21
    RULE_capsValue = 22
    RULE_padParam = 23
    RULE_padValue = 24
    RULE_skipParam = 25
    RULE_skipValue = 26
    RULE_typeParam = 27
    RULE_intensParam = 28
    RULE_intensValue = 29
    RULE_colorParam = 30
    RULE_hiliteParam = 31
    RULE_attrChar = 32
    RULE_bodySection = 33
    RULE_bodyParam = 34
    RULE_kanaParam = 35
    RULE_windowParam = 36
    RULE_width = 37
    RULE_length = 38
    RULE_widthPara = 39
    RULE_statement = 40
    RULE_refreshStatement = 41
    RULE_ifStatement = 42
    RULE_condition = 43
    RULE_andOrCondition = 44
    RULE_combinableCondition = 45
    RULE_simpleCondition = 46
    RULE_relationCondition = 47
    RULE_relationArithmeticComparison = 48
    RULE_arithmeticExpression = 49
    RULE_relationalOperator = 50
    RULE_thenIf = 51
    RULE_verStatement = 52
    RULE_verMsg = 53
    RULE_verCriteria = 54
    RULE_simpleCriteria = 55
    RULE_lengthCriteria = 56
    RULE_listCriteria = 57
    RULE_pictCriteria = 58
    RULE_picValue = 59
    RULE_rangeCriteria = 60
    RULE_expectedLength = 61
    RULE_stringValue = 62
    RULE_varlist = 63
    RULE_maskCharacter = 64
    RULE_fieldMask = 65
    RULE_lower = 66
    RULE_upper = 67
    RULE_elseIf = 68
    RULE_assignStatement = 69
    RULE_variable = 70
    RULE_assignPart = 71
    RULE_vgetStatement = 72
    RULE_vputStatement = 73
    RULE_name_list = 74
    RULE_name_list_item = 75
    RULE_vgetParameter = 76
    RULE_vputParameter = 77
    RULE_initSection = 78
    RULE_procSection = 79
    RULE_defaultParam = 80
    RULE_defValue = 81
    RULE_formatParam = 82
    RULE_formatValue = 83
    RULE_endSection = 84
    RULE_panelFunction = 85
    RULE_pfkFunc = 86
    RULE_pfkParam = 87
    RULE_lvlineFunc = 88
    RULE_lvlineParam = 89
    RULE_stringExpression = 90
    RULE_integerExpression = 91
    RULE_truncFunc = 92
    RULE_stringToTrunc = 93
    RULE_indexToTrunc = 94
    RULE_subStringToTrunc = 95
    RULE_transFunc = 96
    RULE_transDefaultOutput = 97
    RULE_transParam = 98
    RULE_transVariable = 99
    RULE_transReturn = 100
    RULE_value = 101
    RULE_charDataKeyword = 102

    ruleNames =  [ "startRule", "section", "reinitSection", "modelSection", 
                   "modelParam", "model", "attributeSection", "attributeComponent", 
                   "attrParameter", "outlineParam", "outlineValue", "padcParam", 
                   "padcValue", "justParam", "justValue", "areaParam", "areaValue", 
                   "scrollParam", "scrollValue", "extendParam", "extendValue", 
                   "capsParam", "capsValue", "padParam", "padValue", "skipParam", 
                   "skipValue", "typeParam", "intensParam", "intensValue", 
                   "colorParam", "hiliteParam", "attrChar", "bodySection", 
                   "bodyParam", "kanaParam", "windowParam", "width", "length", 
                   "widthPara", "statement", "refreshStatement", "ifStatement", 
                   "condition", "andOrCondition", "combinableCondition", 
                   "simpleCondition", "relationCondition", "relationArithmeticComparison", 
                   "arithmeticExpression", "relationalOperator", "thenIf", 
                   "verStatement", "verMsg", "verCriteria", "simpleCriteria", 
                   "lengthCriteria", "listCriteria", "pictCriteria", "picValue", 
                   "rangeCriteria", "expectedLength", "stringValue", "varlist", 
                   "maskCharacter", "fieldMask", "lower", "upper", "elseIf", 
                   "assignStatement", "variable", "assignPart", "vgetStatement", 
                   "vputStatement", "name_list", "name_list_item", "vgetParameter", 
                   "vputParameter", "initSection", "procSection", "defaultParam", 
                   "defValue", "formatParam", "formatValue", "endSection", 
                   "panelFunction", "pfkFunc", "pfkParam", "lvlineFunc", 
                   "lvlineParam", "stringExpression", "integerExpression", 
                   "truncFunc", "stringToTrunc", "indexToTrunc", "subStringToTrunc", 
                   "transFunc", "transDefaultOutput", "transParam", "transVariable", 
                   "transReturn", "value", "charDataKeyword" ]

    EOF = Token.EOF
    LPAREN=1
    RPAREN=2
    SSLASH=3
    SLASH=4
    AMPCHAR=5
    EXCLAIMCHAR=6
    DOLLARCHAR=7
    JP_MYSTERYCHAR=8
    COMMACHAR=9
    EQUALCHAR=10
    ASTERISK=11
    PLUSCHAR=12
    HASHCHAR=13
    DOUBLEQUOTE=14
    UNDERSCORE=15
    PIPECHAR=16
    RBRACKET=17
    LBRACKET=18
    SINGLEQUOTE=19
    GREATERTHAN=20
    LESSTHAN=21
    CARET=22
    ATTR=23
    BODY=24
    COLOR=25
    DEFAULT=26
    FORMAT=27
    HIGH=28
    EBCDIC=29
    DBCS=30
    MIX=31
    HILITE=32
    INTENS=33
    LOW=34
    NON=35
    TRUNC=36
    TYPE=37
    KANA=38
    WINDOW=39
    INIT=40
    VGET=41
    VPUT=42
    PROC=43
    END=44
    MSG=45
    THEN=46
    IF=47
    AND=48
    OR=49
    NOT=50
    ELSE=51
    TRANS=52
    SKIP_=53
    ON=54
    OFF=55
    VER=56
    NONBLANK=57
    ALPHA=58
    ALPHAB=59
    BIT=60
    DSNAME=61
    DSNAMEF=62
    DSNAMEFM=63
    DSNAMEPQ=64
    DSNAMEQ=65
    ENUM=66
    FILEID=67
    HEX=68
    IDATE=69
    INCLUDE=70
    IPADDR4=71
    ITIME=72
    JDATE=73
    JSTD=74
    LEN=75
    LIST=76
    LISTV=77
    LISTVX=78
    LISTX=79
    NAME=80
    NAMEF=81
    NUM=82
    PICT=83
    PICTCN=84
    RANGE=85
    STDDATE=86
    STDTIME=87
    PAD=88
    NULLS=89
    USER=90
    EXTEND=91
    CAPS=92
    IN=93
    OUT=94
    WIDTH=95
    SCRL=96
    AREA=97
    DYNAMIC=98
    GRAPHIC=99
    SCROLL=100
    LVLINE=101
    LEFT=102
    RIGHT=103
    AXIS=104
    JUST=105
    MODEL=106
    REINIT=107
    PADC=108
    REFRESH=109
    OUTLINE=110
    NONE=111
    BOX=112
    PFK=113
    NEWLINE=114
    WS=115
    INTEGERLITERAL=116
    COMMENT=117
    COMMENT2=118
    IDENTIFIER=119
    STRINGLITERAL=120
    JP_CHAR=121

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartRuleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(PanelParser.EOF, 0)

        def section(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PanelParser.SectionContext)
            else:
                return self.getTypedRuleContext(PanelParser.SectionContext,i)


        def getRuleIndex(self):
            return PanelParser.RULE_startRule

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStartRule" ):
                listener.enterStartRule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStartRule" ):
                listener.exitStartRule(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStartRule" ):
                return visitor.visitStartRule(self)
            else:
                return visitor.visitChildren(self)




    def startRule(self):

        localctx = PanelParser.StartRuleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_startRule)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 207 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 206
                self.section()
                self.state = 209 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==2):
                    break

            self.state = 211
            self.match(PanelParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SectionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attributeSection(self):
            return self.getTypedRuleContext(PanelParser.AttributeSectionContext,0)


        def bodySection(self):
            return self.getTypedRuleContext(PanelParser.BodySectionContext,0)


        def initSection(self):
            return self.getTypedRuleContext(PanelParser.InitSectionContext,0)


        def procSection(self):
            return self.getTypedRuleContext(PanelParser.ProcSectionContext,0)


        def endSection(self):
            return self.getTypedRuleContext(PanelParser.EndSectionContext,0)


        def modelSection(self):
            return self.getTypedRuleContext(PanelParser.ModelSectionContext,0)


        def reinitSection(self):
            return self.getTypedRuleContext(PanelParser.ReinitSectionContext,0)


        def getRuleIndex(self):
            return PanelParser.RULE_section

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSection" ):
                listener.enterSection(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSection" ):
                listener.exitSection(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSection" ):
                return visitor.visitSection(self)
            else:
                return visitor.visitChildren(self)




    def section(self):

        localctx = PanelParser.SectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_section)
        try:
            self.state = 220
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 213
                self.attributeSection()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 214
                self.bodySection()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 215
                self.initSection()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 216
                self.procSection()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 217
                self.endSection()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 218
                self.modelSection()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 219
                self.reinitSection()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReinitSectionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RPAREN(self):
            return self.getToken(PanelParser.RPAREN, 0)

        def REINIT(self):
            return self.getToken(PanelParser.REINIT, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PanelParser.StatementContext)
            else:
                return self.getTypedRuleContext(PanelParser.StatementContext,i)


        def getRuleIndex(self):
            return PanelParser.RULE_reinitSection

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReinitSection" ):
                listener.enterReinitSection(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReinitSection" ):
                listener.exitReinitSection(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReinitSection" ):
                return visitor.visitReinitSection(self)
            else:
                return visitor.visitChildren(self)




    def reinitSection(self):

        localctx = PanelParser.ReinitSectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_reinitSection)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 222
            self.match(PanelParser.RPAREN)
            self.state = 223
            self.match(PanelParser.REINIT)
            self.state = 227
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 72204928596049920) != 0) or _la==109 or _la==119:
                self.state = 224
                self.statement()
                self.state = 229
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ModelSectionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RPAREN(self):
            return self.getToken(PanelParser.RPAREN, 0)

        def MODEL(self):
            return self.getToken(PanelParser.MODEL, 0)

        def modelParam(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PanelParser.ModelParamContext)
            else:
                return self.getTypedRuleContext(PanelParser.ModelParamContext,i)


        def model(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PanelParser.ModelContext)
            else:
                return self.getTypedRuleContext(PanelParser.ModelContext,i)


        def getRuleIndex(self):
            return PanelParser.RULE_modelSection

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModelSection" ):
                listener.enterModelSection(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModelSection" ):
                listener.exitModelSection(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitModelSection" ):
                return visitor.visitModelSection(self)
            else:
                return visitor.visitChildren(self)




    def modelSection(self):

        localctx = PanelParser.ModelSectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_modelSection)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 230
            self.match(PanelParser.RPAREN)
            self.state = 231
            self.match(PanelParser.MODEL)
            self.state = 235
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 232
                    self.modelParam() 
                self.state = 237
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

            self.state = 239 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 238
                self.model()
                self.state = 241 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 35321819429368) != 0) or ((((_la - 80)) & ~0x3f) == 0 and ((1 << (_la - 80)) & 2748779070465) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ModelParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(PanelParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return PanelParser.RULE_modelParam

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModelParam" ):
                listener.enterModelParam(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModelParam" ):
                listener.exitModelParam(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitModelParam" ):
                return visitor.visitModelParam(self)
            else:
                return visitor.visitChildren(self)




    def modelParam(self):
